polaris-react/src/components/IndexTable/IndexTable.scss
@import '../../styles/common';

.IndexTable {
  // stylelint-disable -- Polaris component custom properties
  --pc-index-table-translate-offset: 35px;
  --pc-index-table-table-header-offset: 36px;
  --pc-index-table-cell: 1;
  --pc-index-table-sticky-cell: 31;
  --pc-index-table-scroll-bar: 35;
  --pc-index-table-bulk-actions: 36;
  --pc-index-table-loading-panel: 37;
  // stylelint-enable
  position: relative;
  border-radius: inherit;

  #{$se23} & {
    // stylelint-disable-next-line -- Polaris component custom properties
    --pc-index-table-table-header-offset: 32px;
    border-radius: 0;

    // This is to account for the changing Checkbox size at this breakpoint.
    @media #{$p-breakpoints-md-up} {
      // stylelint-disable-next-line -- Polaris component custom properties
      --pc-index-table-table-header-offset: 30px;
    }

    @media #{$p-breakpoints-sm-up} {
      border-radius: inherit;
      border-start-start-radius: 0;
      border-start-end-radius: 0;
    }
  }
}

.IndexTableWrapper {
  border-radius: inherit;

  #{$se23} & {
    border-radius: 0;
  }
}

.IndexTableWrapperWithBulkActions {
  // stylelint-disable-next-line -- Polaris component custom properties
  --pc-index-table-bulk-actions-offset: 92px;
  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
  padding-bottom: var(--pc-index-table-bulk-actions-offset);
  border-radius: 0;
}

.LoadingContainer-enter {
  opacity: 0;
  transform: translateY(-100%);
}

.LoadingContainer-enter-active {
  opacity: 1;
  transition: opacity var(--p-motion-duration-100) var(--p-motion-ease-out),
    transform var(--p-motion-duration-100) var(--p-motion-ease-out);
  transform: translateY(0);
}

.LoadingContainer-exit {
  opacity: 1;
  transform: translateY(0);
}

.LoadingContainer-exit-active {
  opacity: 0;
  transform: translateY(-100%);
  transition: opacity var(--p-motion-duration-100) var(--p-motion-ease-in),
    transform var(--p-motion-duration-100) var(--p-motion-ease-in);
}

$loading-panel-height: 53px;

.LoadingPanel {
  position: absolute;
  z-index: var(--p-z-index-2);
  top: 0;
  left: 0;
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  background: var(--p-color-bg);
  padding: var(--p-space-2) var(--p-space-4);
  box-shadow: var(--p-shadow-md);

  .LoadingPanelRow {
    display: flex;
    flex-wrap: nowrap;
    width: 100%;
    background: var(--p-color-bg-info-subdued);
    padding: var(--p-space-2);
    padding-bottom: var(--p-space-1);
    border-radius: var(--p-border-radius-1);
  }
}

.LoadingPanelText {
  margin-left: var(--p-space-3);
  color: var(--p-color-text);
}

.Table {
  width: 100%;
  min-width: 100%;
  border-collapse: collapse;
}

.Table-scrolling {
  // stylelint-disable-next-line selector-max-class, selector-max-combinators -- generated by polaris-migrator DO NOT COPY
  .TableCell-first,
  .TableCell-first + .TableCell,
  .TableHeading-first,
  .TableHeading-second {
    visibility: visible;
    background-color: var(--p-color-bg);
  }

  // This is to bust specificity with .Table-scrolling and TableCell:first-child or TableCell:first-child + TableCell bg color above.
  #{$se23} & .TableRow-subdued {
    // stylelint-disable-next-line selector-max-class, selector-max-combinators, selector-max-compound-selectors -- se23 overrides
    .TableCell-first,
    .TableCell-first + .TableCell {
      background-color: var(--p-color-bg-subdued);
    }
  }

  .TableHeading-first,
  .TableHeading-second {
    #{$se23} & {
      background-color: var(--p-color-bg-secondary-experimental);
    }
  }

  .TableCell-first,
  .TableHeading-first {
    filter: drop-shadow(1px 0 0 var(--p-color-border-subdued));
  }

  &.Table-sticky {
    // stylelint-disable-next-line selector-max-class, selector-max-combinators, selector-max-specificity -- generated by polaris-migrator DO NOT COPY
    .TableCell-first + .TableCell,
    .TableHeading-second {
      @media #{$p-breakpoints-sm-up} {
        filter: drop-shadow(1px 0 0 var(--p-color-border-subdued));
      }
    }

    // stylelint-disable-next-line selector-max-class -- generated by polaris-migrator DO NOT COPY
    &.Table-unselectable {
      // stylelint-disable-next-line selector-max-class, selector-max-specificity -- generated by polaris-migrator DO NOT COPY
      .TableHeading-second,
      .TableCell:first-child {
        filter: drop-shadow(1px 0 0 var(--p-color-border-subdued));
      }
    }
  }

  &.Table-unselectable {
    // stylelint-disable-next-line selector-max-class, selector-max-specificity -- generated by polaris-migrator DO NOT COPY
    .TableHeading-second,
    .TableCell:first-child {
      visibility: visible;
    }
  }
}
/* ... */

